2017-01-18  Carl Hetherington  <cth@carlh.net>

	* Updated uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

2017-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.6 released.

2017-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix non frame-aligned trims when using the to-playhead
	buttons.

2016-12-25  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-12-21  Carl Hetherington  <cth@carlh.net>

	* Add approximate finish time to progress on jobs (#927).

	* Version 2.10.5 released.

2016-12-21  Carl Hetherington  <cth@carlh.net>

	* Make "Add folder..." to accept a directory of WAV files (#942).

2016-12-19  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from Rov (若文).

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-12-16  Carl Hetherington  <cth@carlh.net>

	* Fix crash on opening properties dialogue (#1033).

	* Confirm overwrite of KDMs (#1008).

	* Add preference for default KDM target directory (#1013).

	* Fix failure to write referenced DCPs when they have non-zero
	entry points (#1021).

2016-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.4 released.

2016-12-14  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

	* Add tentative support for the S-Gamut3/S-Log3 colourspace.

	* Updated cs_CZ translation from Tomáš Begeni.

2016-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.3 released.

2016-11-26  Carl Hetherington  <cth@carlh.net>

	* Speed up preview of exisiting DCPs when the preview size
	is less than half the full DCP size (#986).

2016-11-25  Carl Hetherington  <cth@carlh.net>

	* Allow multi-edit of content timing details (#1010).

2016-11-23  Carl Hetherington  <cth@carlh.net>

	* Fix crash on pressing enter in a crop control on Windows (#1009).

2016-11-17  Carl Hetherington  <cth@carlh.net>

	* Prevent duplicate screen names within a cinema (#1007).
