@@ -50,7 +50,8 @@ public:
 	virtual void run () = 0;
 
 	void start ();
-	void pause ();
+	void pause_by_user ();
+	void pause_by_priority ();
 	void resume ();
 	void cancel ();
 
@@ -60,7 +61,8 @@ public:
 	bool finished_ok () const;
 	bool finished_in_error () const;
 	bool finished_cancelled () const;
-	bool paused () const;
+	bool paused_by_user () const;
+	bool paused_by_priority () const;
 
 	std::string error_summary () const;
 	std::string error_details () const;
@@ -94,7 +96,8 @@ protected:
 	enum State {
 		NEW,		///< the job hasn't been started yet
 		RUNNING,	///< the job is running
-		PAUSED,		///< the job has been paused
+		PAUSED_BY_USER,	///< the job has been paused
+		PAUSED_BY_PRIORITY, ///< the job has been paused
 		FINISHED_OK,	///< the job has finished successfully
 		FINISHED_ERROR, ///< the job has finished in error
 		FINISHED_CANCELLED ///< the job was cancelled
